# AP-Pacman

./: .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  CODE_REVIEW_UPDATED.md  COLLISION_REFACTORING_GUIDE.md  Doxyfile  IMPROVEMENT_RECOMMENDATIONS.md  README.md
logic/: CMakeLists.txt
logic/include/: EntityModel.h  IConfig.h  IObserver.h  Position.h  Random.h  Score.h  Stopwatch.h  World.h
logic/include/core/config/: IConfig.h  ILogicConfig.h
logic/include/core/entity/: CollectableController.h  Directions.h  EntityCommands.h  EntityModel.h  IEntityController.h  IEntityFactory.h  INavigationAgent.h  MovingEntityController.h  MovingEntityModel.h
logic/include/core/exceptions/: FileNotOpenedException.h
logic/include/core/handlers/: IUpdateHandler.h
logic/include/core/observer/: Events.h  IObserver.h  Observable.h  ObservableTypes.h
logic/include/core/parsers/: IHighScoreParser.h  TXTHighScoreParser.h
logic/include/core/utils/: Random.h  Stopwatch.h  Timer.h
logic/include/core/world/: CollisionHandler.h  Directions.h  ICoordinate.h  LifeCounter.h  Position.h  Score.h  ScoreCounter.h  Size.h  SizedWorldObject.h  TileMap.h  World.h  WorldObject.h
logic/include/entity/: EntityModel.cpp  EntityModel.h  IEntityFactory.h  IEntityModel.h  PlayerModel.h  WallModel.h
logic/include/game/: EntityCommands.h  WorldCommand.h  WorldEvents.h
logic/include/game/entities/: ObserverEvents.h
logic/include/observer/: IObservable.h  IObserver.h  Observable.h
logic/include/utils/: Stopwatch.h
logic/include/world/: ICoordinate.h  IWorldObject.h  Position.h  Size.h  TileMap.cpp  TileMap.h  World.h  WorldObject.h
logic/src/: EntityModel.cpp  IObserver.cpp  Position.cpp  Random.cpp  Score.cpp  Stopwatch.cpp  World.cpp
logic/src/core/: IUpdateHandler.cpp
logic/src/core/entity/: CollectableController.cpp  EntityModel.cpp  MovingEntityController.cpp  MovingEntityModel.cpp
logic/src/core/handlers/: IUpdateHandler.cpp
logic/src/core/observer/: IObserver.cpp
logic/src/core/parsers/: TXTHighScoreParser.cpp
logic/src/core/utils/: Random.cpp  Stopwatch.cpp  Timer.cpp
logic/src/core/world/: CollisionHandler.cpp  Directions.cpp  LifeCounter.cpp  Position.cpp  Score.cpp  ScoreCounter.cpp  Size.cpp  SizedWorldObject.cpp  TileMap.cpp  World.cpp  WorldObject.cpp
logic/src/entity/: EntityModel.cpp  IEntityModel.cpp  PlayerModel.cpp  WallModel.cpp
logic/src/observer/: IObservable.cpp  Observable.cpp
logic/src/utils/: Random.cpp  Stopwatch.cpp
logic/src/world/: ICoordinate.cpp  Position.cpp  Size.cpp  TileMap.cpp  World.cpp  WorldObject.cpp
renderer/: CMakeLists.txt
renderer/include/: Camera.h  DefaultFactoryCollection.h  EntityView.h  Game.h  StateManager.h
renderer/include/config/: DefaultAppConfig.h  DefaultFactoryCollection.h  DefaultLogicConfig.h  IAppConfig.h  IFactoryCollection.h
renderer/include/core/: IDrawHandler.h  IInputHandler.h  IUpdateHandler.h
renderer/include/core/config/: IAppConfig.h  IRendererConfig.h
renderer/include/core/drawable/: DrawObject.h  IDrawable.h
renderer/include/core/entity/: EntityView.h
renderer/include/core/exceptions/: FileNotOpenedException.h  InvalidTextureNameException.h
renderer/include/core/factories/: IFactoryCollection.h  IStateFactory.h
renderer/include/core/handlers/: IDrawHandler.h  IInputHandler.h
renderer/include/core/parser/: IConfigParser.h  IMapParser.h  ITextureParser.h
renderer/include/core/states/: DelegatingState.h  IState.h  IStateDrawHandler.h  IStateInputHandler.h  IStateUpdateHandler.h  StateManager.h
renderer/include/core/utils/: Camera.h
renderer/include/core/world/: IWorldObjectView.h  ScoreView.h  WorldObjectView.h  WorldView.h
renderer/include/drawable/: DrawCollection.h  DrawObject.h  IDrawable.h
renderer/include/drawable/game/: TileMap.h
renderer/include/drawable/ui/: Button.h
renderer/include/entity/: DefaultEntityFactory.h  EntityView.h  WallView.h
renderer/include/entity/derived/: WallView.h
renderer/include/entity/modular/: ModularEntityView.h
renderer/include/exceptions/: FileNotOpenedException.h
renderer/include/factories/: DefaultEntityFactory.h  DefaultFactoryCollection.h  DefaultStateFactory.h  IFactoryCollection.h  StateManagerFactory.h
renderer/include/game/: Game.h  LivesView.h  ScoreView.h
renderer/include/game/configs/: DefaultAppConfig.h  DefaultLogicConfig.h  DefaultRendererConfig.h
renderer/include/game/parsers/: JSONConfigParser.h  (+2 more)
renderer/include/parser/: DefaultTextureParser.h  IConfigParser.h  IMapParser.h  JSONConfigParser.h  TXTMapParser.h
renderer/include/states/: DefaultStateFactory.h  DelegatingState.h  IState.h  IStateFactory.h  IStateInputHandler.h  IStateUpdateHandler.h  MenuState.h  StateManager.h  StateManagerFactory.h
renderer/include/utils/: Camera.h
renderer/lib/: json.hpp
renderer/resources/: config.json  highscores.txt
renderer/resources/maps/: MapGuide.md  map.txt  map1.txt  map2.txt  map3.txt  map4.txt
renderer/resources/sprites/: SpriteGuide.md
renderer/src/: Camera.cpp  DefaultFactoryCollection.cpp  EntityView.cpp  Game.cpp  IFactoryCollection.cpp  IState.cpp  MenuState.cpp  StateManager.cpp  main.cpp
renderer/src/config/: DefaultAppConfig.cpp  DefaultFactoryCollection.cpp  DefaultLogicConfig.cpp  IAppConfig.cpp  IFactoryCollection.cpp
renderer/src/core/: IDrawHandler.cpp  IInputHandler.cpp  IUpdateHandler.cpp
renderer/src/drawable/: DrawCollection.cpp  DrawObject.cpp  IDrawable.cpp
renderer/src/entity/: DefaultEntityFactory.cpp  EntityView.cpp  WallView.cpp
renderer/src/exceptions/: FileNotOpenedException.cpp
renderer/src/factories/: DefaultEntityFactory.cpp  DefaultFactoryCollection.cpp  DefaultStateFactory.cpp
renderer/src/game/: Game.cpp  LivesView.cpp  ScoreView.cpp
renderer/src/parser/: DefaultTextureParser.cpp  IConfigParser.cpp  JSONConfigParser.cpp  TXTMapParser.cpp
renderer/src/states/: DefaultStateFactory.cpp  DelegatingState.cpp  IState.cpp  IStateFactory.cpp  IStateUpdateHandler.cpp  MenuState.cpp  StateManager.cpp  StateManagerFactory.cpp
renderer/src/utils/: Camera.cpp
(+4169 files in other folders)
