set(RENDERER_SOURCES
        src/main.cpp
        src/utils/Camera.cpp
        include/utils/Camera.h
        src/Game.cpp
        include/Game.h
        src/entity/EntityView.cpp
        include/entity/EntityView.h
        src/states/StateManager.cpp
        include/states/StateManager.h
        include/states/IState.h
        src/states/menu/MenuState.cpp
        include/states/menu/MenuState.h
        src/states/DelegatingState.cpp
        include/states/DelegatingState.h
        src/core/IInputHandler.cpp
        include/core/IInputHandler.h
        src/core/IUpdateHandler.cpp
        include/core/IUpdateHandler.h
        src/core/IDrawHandler.cpp
        include/core/IDrawHandler.h
        src/states/menu/MenuUpdateHandler.cpp
        include/states/menu/MenuUpdateHandler.h
        src/states/menu/MenuDrawHandler.cpp
        include/states/menu/MenuDrawHandler.h
        src/states/menu/MenuInputHandler.cpp
        include/states/menu/MenuInputHandler.h
        src/states/StateManagerFactory.cpp
        include/states/StateManagerFactory.h
        include/states/IStateFactory.h
        src/states/DefaultStateFactory.cpp
        include/states/DefaultStateFactory.h
        include/config/IFactoryCollection.h
        src/config/DefaultFactoryCollection.cpp
        include/config/DefaultFactoryCollection.h
        include/parser/IConfigParser.h
        src/parser/JSONConfigParser.cpp
        include/parser/JSONConfigParser.h
        src/exceptions/FileNotOpenedException.cpp
        include/exceptions/FileNotOpenedException.h
        include/config/IAppConfig.h
        src/config/DefaultAppConfig.cpp
        include/config/DefaultAppConfig.h
        include/drawable/IDrawable.h
        include/drawable/DrawObject.h
        src/drawable/IDrawable.cpp
        src/drawable/DrawObject.cpp
        src/drawable/ui/Button.cpp
        include/drawable/ui/Button.h
        src/states/level/LevelState.cpp
        include/states/level/LevelState.h
        src/states/level/LevelUpdateHandler.cpp
        include/states/level/LevelUpdateHandler.h
        src/states/level/LevelInputHandler.cpp
        include/states/level/LevelInputHandler.h
        src/states/level/LevelDrawHandler.cpp
        include/states/level/LevelDrawHandler.h
        include/states/IStateInputHandler.h
        src/states/IStateUpdateHandler.cpp
        include/states/IStateUpdateHandler.h
        src/entity/DefaultEntityFactory.cpp
        include/entity/DefaultEntityFactory.h
        include/parser/IMapParser.h
        src/parser/TXTMapParser.cpp
        include/parser/TXTMapParser.h
        src/config/DefaultLogicConfig.cpp
        include/config/DefaultLogicConfig.h
        src/entity/WallView.cpp
        include/entity/WallView.h
        src/drawable/DrawCollection.cpp
        include/drawable/DrawCollection.h
)

add_executable(Renderer ${RENDERER_SOURCES})
find_package(SFML 2.6 COMPONENTS system window graphics REQUIRED)

target_include_directories(Renderer
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/lib
)

target_include_directories(Renderer
        PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)

target_link_libraries(Renderer
        PRIVATE
        Logic
        sfml-graphics sfml-window sfml-system

)